--- a/PlaylistPresentationWebapp/pom.xml
+++ b/PlaylistPresentationWebapp/pom.xml
@@ -3,11 +3,11 @@
   <modelVersion>4.0.0</modelVersion>
 
   <groupId>org.kgj.pds.playlist.presentation</groupId>
-  <artifactId>webapp</artifactId>
+  <artifactId>PlaylistPresentationWebapp</artifactId>
   <version>0.0.1-SNAPSHOT</version>
   <packaging>jar</packaging>
 
-  <name>webapp</name>
+  <name>PlaylistPresentationWebapp</name>
   <url>http://maven.apache.org</url>
 
   <properties>
