--- a/PlaylistMetierServeurHttp/pom.xml
+++ b/PlaylistMetierServeurHttp/pom.xml
@@ -7,7 +7,40 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<name>PlaylistMetierServeurHttp Maven Webapp</name>
 	<url>http://maven.apache.org</url>
+
+	<build>
+		<finalName>PlaylistMetierServeurHttp</finalName>
+		<plugins>
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
+					<source>1.8</source>
+					<target>1.8</target>
+				</configuration>
+			</plugin>
+		</plugins>
+	</build>
+
 	<dependencies>
+
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-api</artifactId>
+			<version>2.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.apache.logging.log4j</groupId>
+			<artifactId>log4j-core</artifactId>
+			<version>2.2</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.apache.activemq</groupId>
+			<artifactId>activemq-all</artifactId>
+			<version>5.11.1</version>
+		</dependency>
+
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -21,7 +54,4 @@
 			<scope>provided</scope>
 		</dependency>
 	</dependencies>
-	<build>
-		<finalName>PlaylistMetierServeurHttp</finalName>
-	</build>
 </project>
