--- a/PlaylistPersistanceReceive/.project
+++ b/PlaylistPersistanceReceive/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>PlaylistPersistanceReceive</name>
+	<name>PlaylistPersistance</name>
 	<comment></comment>
 	<projects>
 	</projects>
