--- a/PlaylistPersistanceReceive/pom.xml
+++ b/PlaylistPersistanceReceive/pom.xml
@@ -1,25 +1,23 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-  <modelVersion>4.0.0</modelVersion>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+	<modelVersion>4.0.0</modelVersion>
 
-  <groupId>org.kgj.pds.playlist.persistance</groupId>
-  <artifactId>PlaylistPersistanceReceive</artifactId>
-  <version>0.0.1-SNAPSHOT</version>
-  <packaging>jar</packaging>
+	<parent>
+		<groupId>org.kgj.pds.playlist</groupId>
+		<artifactId>PlaylistManager</artifactId>
+		<version>0.0.1</version>
+	</parent>
 
-  <name>PlaylistPersistanceReceive</name>
-  <url>http://maven.apache.org</url>
+	<groupId>org.kgj.pds.playlist.persistance</groupId>
+	<artifactId>PlaylistPersistanceReceive</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
 
-  <properties>
-    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-  </properties>
+	<name>PlaylistPersistanceReceive</name>
+	<url>http://maven.apache.org</url>
 
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
+	<properties>
+		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+	</properties>
+
 </project>
