--- a/PlaylistPresentationWebapp/pom.xml
+++ b/PlaylistPresentationWebapp/pom.xml
@@ -1,21 +1,20 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion>
-  <groupId>org.kgj.pds.playlist.presentation</groupId>
-  <artifactId>PlaylistWebapp</artifactId>
-  <packaging>war</packaging>
-  <version>0.0.1-SNAPSHOT</version>
-  <name>PlaylistWebapp Maven Webapp</name>
-  <url>http://maven.apache.org</url>
-  <dependencies>
-    <dependency>
-      <groupId>junit</groupId>
-      <artifactId>junit</artifactId>
-      <version>3.8.1</version>
-      <scope>test</scope>
-    </dependency>
-  </dependencies>
-  <build>
-    <finalName>PlaylistWebapp</finalName>
-  </build>
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+	<modelVersion>4.0.0</modelVersion>
+
+	<parent>
+		<groupId>org.kgj.pds.playlist</groupId>
+		<artifactId>PlaylistManager</artifactId>
+		<version>0.0.1</version>
+	</parent>
+
+	<groupId>org.kgj.pds.playlist.presentation</groupId>
+	<artifactId>PlaylistPresentationWebapp</artifactId>
+	<packaging>war</packaging>
+	<version>0.0.1-SNAPSHOT</version>
+	<name>PlaylistPresentationWebapp</name>
+	<url>http://maven.apache.org</url>
+	<build>
+		<finalName>PlaylistPresentationWebapp</finalName>
+	</build>
 </project>
