--- a/PlaylistPersistanceReceive/.classpath
+++ b/PlaylistPersistanceReceive/.classpath
@@ -22,5 +22,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry kind="lib" path="C:/Program Files (x86)/MySQL/Connector.J 5.1/mysql-connector-java-5.1.35-bin.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
