--- a/PlaylistPresentationWebapp/src/main/webapp/WEB-INF/web.xml
+++ b/PlaylistPresentationWebapp/src/main/webapp/WEB-INF/web.xml
@@ -3,5 +3,20 @@
  "http://java.sun.com/dtd/web-app_2_3.dtd" >
 
 <web-app>
-  <display-name>Archetype Created Web Application</display-name>
+	<display-name>Archetype Created Web Application</display-name>
+	<listener>
+		<listener-class>
+			org.kgj.pds.playlist.presentation.webapp.MyServletBoot
+		</listener-class>
+	</listener>
+	<servlet>
+		<servlet-name>myServlet</servlet-name>
+		<display-name>myServlet</display-name>
+		<description></description>
+		<servlet-class>org.kgj.pds.playlist.presentation.webapp.myServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>myServlet</servlet-name>
+		<url-pattern>/myServlet</url-pattern>
+	</servlet-mapping>
 </web-app>
