--- a/PlaylistPresentationWebapp/.classpath
+++ b/PlaylistPresentationWebapp/.classpath
@@ -1,13 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/main/resources"/>
 	<classpathentry kind="src" path="src/main/java"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/J2SE-1.5">
+	<classpathentry kind="src" path="src/main/resources"/>
+	<classpathentry kind="lib" path="/home/doot/Documents/SERVEURS/TOMCAT7/lib/servlet-api.jar"/>
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="C:/Users/U21414518/Downloads/apache-tomcat-8.0.15-windows-x86/apache-tomcat-8.0.15/lib/servlet-api.jar"/>
 	<classpathentry kind="lib" path="src/main/resources/activemq-all-5.11.0.jar"/>
+	<classpathentry kind="lib" path="src/main/resources/log4j-api-2.2.jar"/>
+	<classpathentry kind="lib" path="src/main/resources/log4j-core-2.2.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
