--- a/PlaylistPresentationWebapp/.classpath
+++ b/PlaylistPresentationWebapp/.classpath
@@ -1,15 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="src" path="src/main/java"/>
 	<classpathentry kind="src" path="src/main/resources"/>
-	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+	<classpathentry kind="src" path="src/main/java"/>
+	<classpathentry exported="true" kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
 		<attributes>
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
-	<classpathentry kind="lib" path="src/main/resources/activemq-all-5.11.0.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/log4j-api-2.2.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/log4j-core-2.2.jar"/>
-	<classpathentry kind="lib" path="src/main/resources/servlet-api.jar"/>
+	<classpathentry exported="true" kind="lib" path="src/main/resources/activemq-all-5.11.0.jar"/>
+	<classpathentry exported="true" kind="lib" path="src/main/resources/log4j-api-2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="src/main/resources/log4j-core-2.2.jar"/>
+	<classpathentry exported="true" kind="lib" path="src/main/resources/servlet-api.jar"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
