variabilisation of pom for dependencies versions

--- a/.gitignore
+++ b/.gitignore
@@ -10,11 +10,11 @@ tmp/
 *.swp
 *~.nib
 local.properties
-#.settings/
+.settings/
 .loadpath
 
 # Eclipse Core
-#.project
+.project
 
 # External tool builders
 .externalToolBuilders/
@@ -26,7 +26,7 @@ local.properties
 .cproject
 
 # JDT-specific (Eclipse Java Development Tools)
-#.classpath
+.classpath
 
 # PDT-specific
 .buildpath
@@ -37,6 +37,7 @@ local.properties
 # TeXlipse plugin
 .texlipse
 
+*/build/
 /target/
 /activemq-data/*
 /logs/*
