--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,7 @@
 		<activemq.version>5.11.1</activemq.version>
 		<servlet.version>2.5</servlet.version>
 		<httpclient.version>3.1</httpclient.version>
+		<mysql.version>5.1.35</mysql.version>
 	</properties>
 
 
