--- a/PlaylistMetierServeurHttpPersistenceSide/src/main/resources/users.properties
+++ b/PlaylistMetierServeurHttpPersistenceSide/src/main/resources/users.properties
@@ -1,2 +1,7 @@
+#User1
 user1.login=foo
 user1.password=37b51d194a7513e45b56f6524f2d51f2
+
+#User2
+user2.login=toto
+user2.password=f71dbe52628a3f83a77ab494817525c6
