Add retry on localhost if ip broker suck

--- a/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
+++ b/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
@@ -1,7 +1,7 @@
 driverName 		  = com.mysql.jdbc.Driver
-urlDatabase 	  = jdbc:mysql://localhost:3306/gestplay
+urlDatabase 	  = jdbc:mysql://localhost:3306/GESTPLAY
 login			  = root
-password		  = root
+password		  = 
 
 playlistRead	  = select * from gestplay.playlist where id = ?;
 playlistSearchAll = select * from gestplay.playlist;
