--- a/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
+++ b/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
@@ -1,5 +1,5 @@
 driverName 		  = com.mysql.jdbc.Driver
-urlDatabase 	  = jdbc:mysql://localhost:3306/GESTPLAY
+urlDatabase 	  = jdbc:mysql://localhost:3306/gestplay
 login			  = root
 password		  = 
 
