modif pom add module children project

--- a/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
+++ b/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
@@ -1,7 +1,7 @@
 driverName 		  = com.mysql.jdbc.Driver
 urlDatabase 	  = jdbc:mysql://localhost:3306/gestplay
 login			  = root
-password		  = 
+password		  = root
 
 playlistRead	  = select * from gestplay.playlist where id = ?;
 playlistSearchAll = select * from gestplay.playlist;
