--- a/pom.xml
+++ b/pom.xml
@@ -9,6 +9,12 @@
 
 	<name>PlaylistManager</name>
 	<url>http://maven.apache.org</url>
+	
+	<modules>
+   		<module>PlaylistMetierServeurHttpViewSide</module>
+		<module>PlaylistMetierServeurHttpPersistenceSide</module>
+		<module>PlaylistPersistanceApplication</module>
+  	</modules>
 
 	<build>
 		<plugins>
