--- a/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
+++ b/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
@@ -23,6 +23,12 @@ playlistUpdate	  = update gestplay.playlist set data = ? where id = ?;
 trackUpdate		  = update gestplay.track set data = ? where id = ?;
 userUpdate		  = update gestplay.user set data = ? where id = ?;
 
-playlistDelete	  = delete from gestplay.playlist where id = ?;
-trackDelete		  = delete from gestplay.track where id = ?;
-userDelete		  = delete from gestplay.user where id = ?;
+
+playlistXMLRead	  = select * from gestplay.playlist where creator = ? AND version = (SELECT MAX(version) FROM gestplay.playlist WHERE CREATOR = ? and statut = true) AND statut = true;
+playlistXMLInsert = insert into gestplay.playlist values (?);
+playlistXMLDisable= update gestplay.playlist set data = ? where id = ?;
+
+queryRead	      = select query from gestplay.query where creator = ? AND version = (SELECT MAX(version) FROM gestplay.query WHERE CREATOR = ? and statut = true) AND statut = true;
+queryInsert       = insert into gestplay.query values (?);
+queryEnableDisable= insert into gestplay.query values (?);
+queryMaxId		  = select MAX(id) from gestplay.query;
