--- a/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
+++ b/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
@@ -29,6 +29,6 @@ playlistXMLInsert = insert into gestplay.playlist values (?);
 playlistXMLDisable= update gestplay.playlist set data = ? where id = ?;
 
 queryRead	      = select query from gestplay.query where creator = ? AND version = (SELECT MAX(version) FROM gestplay.query WHERE CREATOR = ? and statut = true) AND statut = true;
-queryInsert       = insert into gestplay.query values (?);
+queryInsert       = insert into gestplay.query SET id=?,version=?,statut=?,creator=?,query=?;
 queryEnableDisable= insert into gestplay.query values (?);
-queryMaxId		  = select MAX(id) from gestplay.query;
+queryMaxId		  = select MAX(id) as id from gestplay.query;
