modif, delete ok for persistance

--- a/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
+++ b/PlaylistPersistanceApplication/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
@@ -28,7 +28,8 @@ playlistXMLRead	  = select * from gestplay.playlist where creator = ? AND versio
 playlistXMLInsert = insert into gestplay.playlist values (?);
 playlistXMLDisable= update gestplay.playlist set data = ? where id = ?;
 
-queryRead	      = select query from gestplay.query where creator = ? AND version = (SELECT MAX(version) FROM gestplay.query WHERE CREATOR = ? and statut = true) AND statut = true;
+queryRead	      = SELECT * FROM gestplay.query tt INNER JOIN (SELECT id, query, MAX(version) AS MaxVersion FROM gestplay.query GROUP BY id) groupedtt ON tt.id = groupedtt.id AND tt.version = groupedtt.MaxVersion AND creator = ? AND statut = true;
 queryInsert       = insert into gestplay.query SET id=?,version=?,statut=?,creator=?,query=?;
-queryEnableDisable= insert into gestplay.query values (?);
+queryEnableDisable= insert into gestplay.query SET id=?,version=?,statut=?,creator=?,query=?;
 queryMaxId		  = select MAX(id) as id from gestplay.query;
+queryMaxVersion   = select MAX(version) as version from gestplay.query where id = ?;
