Ajout de l'undo

--- a/PlaylistPersistanceApplicationServer/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
+++ b/PlaylistPersistanceApplicationServer/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
@@ -33,3 +33,6 @@ queryInsert       = insert into gestplay.query SET id=?,version=?,statut=?,creat
 queryEnableDisable= insert into gestplay.query SET id=?,version=?,statut=?,creator=?,query=?;
 queryMaxId		  = select MAX(id) as id from gestplay.query;
 queryMaxVersion   = select MAX(version) as version from gestplay.query where id = ?;
+
+queryDeleteById			  = DELETE FROM gestplay.query tt INNER JOIN (SELECT id, query, MAX(version) AS MaxVersion FROM gestplay.query GROUP BY id) groupedtt ON tt.id = groupedtt.id AND tt.version = groupedtt.MaxVersion AND creator = ? AND statut = true AND id = ?;
+queryReadById	      = SELECT * FROM gestplay.query tt INNER JOIN (SELECT id, query, MAX(version) AS MaxVersion FROM gestplay.query GROUP BY id) groupedtt ON tt.id = groupedtt.id AND tt.version = groupedtt.MaxVersion AND creator = ? AND statut = true AND id = ?;
