--- a/PlaylistPersistanceApplicationServer/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
+++ b/PlaylistPersistanceApplicationServer/src/main/java/org/kgj/pds/playlist/persistance/model/db.properties
@@ -34,5 +34,7 @@ queryEnableDisable= insert into gestplay.query SET id=?,version=?,statut=?,creat
 queryMaxId		  = select MAX(id) as id from gestplay.query;
 queryMaxVersion   = select MAX(version) as version from gestplay.query where id = ?;
 
-queryDeleteById   = DELETE FROM gestplay.query tt INNER JOIN (SELECT id, query, MAX(version) AS MaxVersion FROM gestplay.query GROUP BY id HAVING id = ?) groupedtt ON tt.id = groupedtt.id AND tt.version = groupedtt.MaxVersion AND creator = ? AND statut = true;
+deleteByMaxVersion= DELETE FROM gestplay.query WHERE id = ? AND version = ?
+selectVersion     = SELECT * FROM gestplay.query WHERE id = ?;
+queryDeleteById   = DELETE FROM gestplay.query WHERE (SELECT id, query, MAX(version) AS MaxVersion FROM gestplay.query GROUP BY id HAVING id = ?) groupedtt ON tt.id = groupedtt.id AND tt.version = groupedtt.MaxVersion AND creator = ? AND statut = true;
 queryReadById	  = SELECT * FROM gestplay.query tt INNER JOIN (SELECT id, query, MAX(version) AS MaxVersion FROM gestplay.query GROUP BY id HAVING id = ?) groupedtt ON tt.id = groupedtt.id AND tt.version = groupedtt.MaxVersion AND creator = ? AND statut = true;
